; ModuleID = '/home/carl/AnghaBench/reactos/base/applications/network/ftp/extr_ftp.c_cmdabort.c'
source_filename = "/home/carl/AnghaBench/reactos/base/applications/network/ftp/extr_ftp.c_cmdabort.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [2 x i8] c"\0A\00", align 1
@stdout = common dso_local global i32 0, align 4
@abrtflag = common dso_local global i32 0, align 4
@ptflag = common dso_local global i64 0, align 8
@ptabort = external dso_local global i32, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @cmdabort to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @cmdabort(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = call i32 @printf(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0))
  %4 = load i32, i32* @stdout, align 4
  %5 = call i32 @fflush(i32 %4)
  %6 = load i32, i32* @abrtflag, align 4
  %7 = add nsw i32 %6, 1
  store i32 %7, i32* @abrtflag, align 4
  %8 = load i64, i64* @ptflag, align 8
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %13

10:                                               ; preds = %1
  %11 = load i32, i32* @ptabort, align 4
  %12 = call i32 @longjmp(i32 %11, i32 1) #3
  unreachable

13:                                               ; preds = %1
  ret void
}

declare dso_local i32 @printf(i8*) #1

declare dso_local i32 @fflush(i32) #1

; Function Attrs: noreturn
declare dso_local i32 @longjmp(i32, i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
